--- a/www/css/compass/_partials/_settings.scss
+++ b/www/css/compass/_partials/_settings.scss
@@ -2,4 +2,5 @@
 // variables
 // ***************************************
 
-$red: #f68e5d;
+$text-color : #444;
+$red : #f68e5d;
